objects/X7S_Event__c/X7S_Event__c.object-meta.xml
<CustomObject>
    <description>Object to support Events records as part of the Events accelerator from 7Summits.</description>
    <label>7S Event</label>
    <nameField>
        <label>Events Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>7S Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>