objects/X7S_Event__c/fields/All_Day_End__c.field-meta.xml
<CustomField>
    <fullName>All_Day_End__c</fullName>
    <inlineHelpText>All day event end date</inlineHelpText>
    <label>All Day End</label>
    <type>Date</type>
</CustomField>