objects/X7S_Event__c/fields/Created_At__c.field-meta.xml
<CustomField>
    <fullName>Created_At__c</fullName>
    <description>Date/Time meeting created.</description>
    <label>Created At</label>
    <type>DateTime</type>
</CustomField>