objects/X7S_Event__c/fields/Enable_RSVP__c.field-meta.xml
<CustomField>
    <fullName>Enable_RSVP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable RSVP</label>
    <type>Checkbox</type>
</CustomField>