objects/X7S_Event__c/fields/Event_Format__c.field-meta.xml
<CustomField>
    <fullName>Event_Format__c</fullName>
    <label>Event Format</label>
    <length>80</length>
    <type>Text</type>
</CustomField>