objects/X7S_Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>Event type</description>
    <inlineHelpText>Event type</inlineHelpText>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>North America West</fullName>
            </value>
            <value>
                <fullName>North America Central</fullName>
            </value>
            <value>
                <fullName>North America East</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>Aus</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
                <isActive>false</isActive>
                <label>Meeting</label>
            </value>
            <value>
                <fullName>Type 1</fullName>
                <isActive>false</isActive>
                <label>Type 1</label>
            </value>
            <value>
                <fullName>Type 2</fullName>
                <isActive>false</isActive>
                <label>Type 2</label>
            </value>
            <value>
                <fullName>Type 3</fullName>
                <isActive>false</isActive>
                <label>Type 3</label>
            </value>
            <value>
                <fullName>Webinar</fullName>
                <isActive>false</isActive>
                <label>Webinar</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>