objects/X7S_Event__c/fields/Host_Email__c.field-meta.xml
<CustomField>
    <fullName>Host_Email__c</fullName>
    <description>Email address of the meeting host</description>
    <label>Host Email</label>
    <type>Email</type>
</CustomField>