objects/X7S_Event__c/fields/Image_Reference__c.field-meta.xml
<CustomField>
    <fullName>Image_Reference__c</fullName>
    <label>Image Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>