objects/X7S_Event__c/fields/Image_Type__c.field-meta.xml
<CustomField>
    <fullName>Image_Type__c</fullName>
    <label>Image Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attachment</fullName>
            </value>
            <value>
                <fullName>Related File</fullName>
                <default>true</default>
                <label>File</label>
            </value>
            <value>
                <fullName>External URL</fullName>
            </value>
            <value>
                <fullName>Static Resource</fullName>
            </value>
            <value>
                <fullName>CMS Content</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>