objects/X7S_Event__c/fields/Join_Url__c.field-meta.xml
<CustomField>
    <fullName>Join_Url__c</fullName>
    <description>Url to use to join the meeting</description>
    <label>Join Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>