objects/X7S_Event__c/fields/Join_URL_Icon__c.field-meta.xml
<CustomField>
    <fullName>Join_URL_Icon__c</fullName>
    <label>Join URL Icon</label>
    <length>80</length>
    <type>Text</type>
</CustomField>