objects/X7S_Event__c/fields/Join_URL_Label__c.field-meta.xml
<CustomField>
    <fullName>Join_URL_Label__c</fullName>
    <label>Join URL Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>