objects/X7S_Event__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>en_US</fullName>
                <label>English</label>
            </value>
            <value>
                <fullName>es</fullName>
                <isActive>false</isActive>
                <label>es</label>
            </value>
            <value>
                <fullName>nl_NL</fullName>
                <isActive>false</isActive>
                <label>nl_NL</label>
            </value>
            <value>
                <fullName>zh_CN</fullName>
                <isActive>false</isActive>
                <label>zh_CN</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>