objects/X7S_Event__c/fields/Location_URL__c.field-meta.xml
<CustomField>
    <fullName>Location_URL__c</fullName>
    <label>Location URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>