objects/X7S_Event__c/fields/MeetingId__c.field-meta.xml
<CustomField>
    <fullName>MeetingId__c</fullName>
    <defaultValue>null</defaultValue>
    <description>Unique identifier of the meeting</description>
    <label>MeetingId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>