objects/X7S_Event__c/fields/NetworkId__c.field-meta.xml
<CustomField>
    <fullName>NetworkId__c</fullName>
    <label>NetworkId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>