objects/X7S_Event__c/fields/Pre_RSVP_Message__c.field-meta.xml
<CustomField>
    <fullName>Pre_RSVP_Message__c</fullName>
    <label>Pre RSVP Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>