objects/X7S_Event__c/fields/Registration__c.field-meta.xml
<CustomField>
    <fullName>Registration__c</fullName>
    <label>Registration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None Required</fullName>
                <default>true</default>
                <label>None Required</label>
            </value>
            <value>
                <fullName>Auto Approval</fullName>
            </value>
            <value>
                <fullName>Manual Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>