objects/X7S_Event__c/fields/Registration_Setting__c.field-meta.xml
<CustomField>
    <fullName>Registration_Setting__c</fullName>
    <description>CMT Setting Name - [7S Event Registration Setting]</description>
    <label>Registration Setting</label>
    <length>40</length>
    <type>Text</type>
</CustomField>