objects/X7S_Event__c/fields/Registration_Url__c.field-meta.xml
<CustomField>
    <fullName>Registration_Url__c</fullName>
    <description>Url to use for external meeting registration</description>
    <label>Registration Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>