objects/X7S_Event__c/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <description>Custom field test field school</description>
    <label>School</label>
    <length>255</length>
    <type>Text</type>
</CustomField>