objects/X7S_Event__c/fields/Start_Url__c.field-meta.xml
<CustomField>
    <fullName>Start_Url__c</fullName>
    <description>Url used to start the meeting by host.</description>
    <label>Start Url</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>