objects/X7S_Event__c/fields/Ticket_Price__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Price__c</fullName>
    <label>Ticket Price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>