objects/X7S_Event__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of meeting.</description>
    <label>Type</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>