objects/X7S_Event__c/fields/Venue_Information__c.field-meta.xml
<CustomField>
    <fullName>Venue_Information__c</fullName>
    <label>Venue Information</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>