objects/X7S_Event__c/fields/Volunteer_Description__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Description__c</fullName>
    <description>Overall description of volunteer needs</description>
    <label>Volunteer Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>