objects/X7S_Event__c/validationRules/Cannot_be_blank_when_RSVP_enabled.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_be_blank_when_RSVP_enabled</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISBLANK( RSVP_Count_Threshold__c ),
Enable_RSVP__c
)</errorConditionFormula>
    <errorDisplayField>RSVP_Count_Threshold__c</errorDisplayField>
    <errorMessage>RSVP Count Threshold must be set if RSVP is enabled.</errorMessage>
</ValidationRule>